MDEV-14667 Assertion `used_parts > 0' failed in ha_partition::init_record_priority_queue.

Do not fail fi all the partitions were pruned out.